--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/winston": "^2.4.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "fluent-ffmpeg": "^2.1.3",
     "winston": "^3.17.0"
   }
 }
